# data-xfrm

./: Makefile  README.md  data-xfrm.cabal  stack.yaml  test.csv
src/: csv2dsv.hs  csvtoxml.hs  xmltocsv.hs  xmltotxt.hs  yaml2xml.hs
src/Text/Table/: CSVTable.hs  XMLTable.hs
